Change Log for OpenXava project
===============================

- Commons-logging upgraded to 1.3.4.
- Poi and poi-ooxml upgraded to 5.3.0.
- Groovy upgraded to 4.0.22.
- Jsoup upgraded to 1.18.1.
- Htmlunit upgraded to 4.4.0.
- Lombok upgraded to 1.18.34.
- Embedded Tomcat used in development upgraded to 9.0.93.
- Log4j-api log4j-core upgraded to 2.24.0.
- Pdfbox upgraded to 3.0.3.

- New delete action for collection that always deletes the element completely from the database.
- @DeleteSelectedAction annotation for collection to define a custom action for deleting an element.
- Icon and label for remove action in collection changed to indicate it just removes from the collection.
- New 'Open in new tab' row action by default in collections. 
- Popup menu for row actions in list and collections when there are more than two actions.

- Master-Detail archetypes include a dashboard and use @Calculation instead of calculated properties.
- The invoicedemo project includes a dashboard and uses @Calculation instead of calculated properties.
- @Chart annotation for collections to display the collection as a chart from its data.
- @LargeDisplay annotation to display a property value in large format, with large fonts, spacing, etc.
- Example of creating a dashboard in openxavatest with the StaffDashboard module.
- @SimpleList annotation for collections to display it without actions, filters, pagination, sorting, etc.

- Support for java.time.LocalDateTime as a type for properties in entities.

- Typing day and month in a date or date/time field autocompletes the date with the current year.

- Record count included in automatic PDF reports of list mode and collections.

- @SearchListCondition allows the use of ${this.somePropertyDisplayedInView} in the condition.

- New @SearchListTab annotation for references and collections to choose the tab for the dialog search list.

- New @NoDefaultActions annotation for not showing default actions for a specific collection.

