@@ -1,9 +1,9 @@
 package org.openxava.test.services;
 
-import javax.json.bind.annotation.*;
-import javax.ws.rs.client.*;
-
 import org.openxava.test.model.*;
+
+import jakarta.json.bind.annotation.*;
+import jakarta.ws.rs.client.*;
 
 /**
  * 
